# SafeAI

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_FOR_CONTRIBUTORS.md  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_PROJECTS.md  CONTRIBUTING.md  CONTRIBUTOR_ROADMAP.md  FRAMEWORK_SUPPORT.md  GITHUB_RELEASE.md  GOOD_FIRST_ISSUES.md  HOW_TO_ADD_ANALYZER.md  HOW_TO_ADD_CAPABILITY.md  HOW_TO_ADD_FRAMEWORK.md  HOW_TO_ADD_RULE.md  LABELS_GUIDE.md  LICENSE  MCP_SECURITY.md  README.md  RELEASE_NOTES.md  RISK_MODEL.md  ROADMAP.md  RULES_REFERENCE.md  SECURITY.md  SECURITY_MODEL.md  TESTING_CORPUS_GUIDE.md  USER_GUIDE.md  pyproject.toml
PLUGIN_TEMPLATE/: README.md
examples/: README.md  azure_foundry.yaml  bedrock_agent.json  crewai_example.py  langgraph_example.py
examples/autogen/: README.md
examples/crewai/: README.md
examples/google-adk/: README.md
examples/langgraph/: README.md
examples/mcp/: README.md
examples/multi-agent/: README.md
examples/n8n/: README.md
examples/prompts/: README.md
examples/risky/: README.md
examples/safe/: README.md
examples/semantic-kernel/: README.md
examples/workflows/: README.md
safeai/: __init__.py  __main__.py
safeai/analysis/: aggregation.py  capabilities.py  import_graph.py  project_graph.py  semantic.py
safeai/cmd/: cli.py
safeai/engine/: scan.py
scripts/: create_good_first_issues.py
tests/: test_confidence_arbitration.py  test_html_report.py  test_mcp_validation.py  test_parser_aggregation.py  test_release_fixes.py  test_sarif.py  test_scan_phase11.py  test_scoring.py  test_semantic.py
(+22 files in other folders)
