[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safeai"
version = "1.0.0b0"
description = "The lightweight, open-source Static AI Capability & Risk Analyzer for CI/CD pipelines."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "IkarusCareer" },
]
keywords = ["ai-security", "static-analysis", "llm", "agents", "mcp", "sarif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://safeai-analyzer.ikaruscareer.com"
Repository = "https://github.com/ikaruscareer/SafeAI"
Issues = "https://github.com/ikaruscareer/SafeAI/issues"

[project.scripts]
safeai = "safeai.cmd.cli:main"

[tool.setuptools.packages.find]
include = ["safeai*"]

[tool.setuptools.package-data]
safeai = ["rules/*.yaml", "rules/*.yml"]
